deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corumpage-deployment
  namespace: corumpage
  labels:
    app: corumpage
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: corumpage
  template:
    metadata:
      labels:
        app: corumpage
    spec:
      containers:
        - name: corumpage
          image: corumcorp/corumpage:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
