deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-ingress-class: public
  name: corumpage-ingress
  namespace: corumpage
spec:
  ingressClassName: public
  rules:
  - host: corum.org.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: corumpage-svc
            port:
              number: 80
  - host: www.corum.org.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: corumpage-svc
            port:
              number: 80
  tls:
  - hosts:
    - corum.org.co
    secretName: corumpage-com-co
  - hosts:
    - www.corum.org.co
    secretName: corumpage-www-com-co
